@@ -6,22 +6,35 @@
 #include "RTIDDS_Component_Instance_Handler.inl"
 #endif
 
-////
-//// operator <<=
-////
-//void operator <<= (::DDS::EntityFactoryQosPolicy & qos, const iccm::EntityFactoryQosPolicy & policy)
-//{
-//  qos.autoenable_created_entities = policy.autoenable_created_entities ();
-//}
+#include "cuts/iccm/ddsxml/dds.h"
+
 //
-////
-//// operator <<=
-////
-//void operator <<= (::DDS::DomainParticipantFactoryQos & qos, const iccm::DomainParticipantFactoryQos & policy)
-//{
-//  if (policy.entity_factory_p ())
-//    qos.entity_factory <<= policy.entity_factory ();
-//}
+// operator <<=
+//
+void operator <<= (::DDS_EntityFactoryQosPolicy & qos, const iccm::EntityFactoryQosPolicy & policy)
+{
+  qos.autoenable_created_entities = policy.autoenable_created_entities ();
+}
+
+//
+// operator <<=
+//
+void operator <<= (::DDS_SystemResourceLimitsQosPolicy & qos, const iccm::SystemResourceLimitsQosPolicy & policy)
+{
+  qos.max_objects_per_thread = policy.max_objects_per_thread ();
+}
+
+//
+// operator <<=
+//
+void operator <<= (::DDS_DomainParticipantFactoryQos & qos, const iccm::DomainParticipantFactoryQos & policy)
+{
+  if (policy.entity_factory_p ())
+    qos.entity_factory <<= policy.entity_factory ();
+
+  if (policy.resource_limits_p ())
+    qos.resource_limits <<= policy.resource_limits ();
+}
 
 namespace iCCM
 {
@@ -33,12 +46,11 @@ void RTIDDS_Component_Instance_Handler::
 configure_DDSDomainQoS (const iccm::DomainParticipantFactoryQos & value)
 {
   // Get the current QoS values, update them, and set them.
-  ::DDSDomainParticipantFactory * dpf = ::DDSDomainParticipantFactory::get_instance ();
   ::DDS_DomainParticipantFactoryQos qos;
 
-  dpf->get_qos (qos);
-  //qos <<= value;
-  dpf->set_qos (qos);
+  DDSTheParticipantFactory->get_qos(qos);
+  qos <<= value;
+  DDSTheParticipantFactory->set_qos(qos);
 }
 
 }
